[gd_scene load_steps=7 format=3 uid="uid://7c2rhb7u7s6m"]

[ext_resource type="Script" path="res://scripts/key_2.gd" id="1_obtno"]
[ext_resource type="Texture2D" uid="uid://dqcm5aj773m1a" path="res://assets/items/key NW-sprite.png" id="1_r7ecx"]
[ext_resource type="AudioStream" uid="uid://bowqkfgs4d15n" path="res://Platformer-25-Assets (1)/Platformer-25-Assets/confirmation_002.ogg" id="3_wmryx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_h3y2e"]
atlas = ExtResource("1_r7ecx")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_3fj4s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3y2e")
}],
"loop": true,
"name": &"key",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n5wvt"]
size = Vector2(18, 4)

[node name="Key2" type="Area2D"]
script = ExtResource("1_obtno")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_3fj4s")
animation = &"key"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_n5wvt")

[node name="SoundKey2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_wmryx")
volume_db = -15.0

[connection signal="body_entered" from="." to="." method="_on_Key2_body_entered"]
[connection signal="finished" from="SoundKey2" to="." method="_on_sound_key_2_finished"]
